Test/errors/err_program_duplicate_main.cb
import "list.cb";
import "thread.cb";

expect_error("multiple 'main' methods defined") {
    program DupMain {
        int main() { return 0; }
        int main(move list<string> args) { return 1; }
    };
}
